thesis: Valentina's comments to ch. 4
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5207 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/alignment.tex
+++ b/2010/thesis/alignment.tex
@@ -3,7 +3,7 @@
 %\TODO{!! ADD CITATIONS !!}
 %\TODO{experience from other experiments}
 
-An accurate detector alignment is of major importance for the \abb{TOTEM} experiment in order to deliver precise measurements. Among the sub-detectors of \abb{TOTEM}, the alignment of the Roman Pots (\abb{RP}s) presents the biggest challenge since they are movable and, in principle, they can be at a different position for every run. \Tb{al reco impact} illustrates the impact of a misalignment on physics reconstruction. To give a representative overview we have included two optics -- the high-$\be^*$ (left column) and a low-$\be^*$ (right column, this is the standard 2010 \abb{LHC} optics discussed later in \Sc{felm}). For both of them we have considered a vertical misalignment $\De y$ of $100\un{\mu m}$ (a typical order, cf.~\Tb{al exp misal}). The impact on the vertical scattering angle reconstruction (see e.g.~\Eq{felm xy reco}) can be estimated by $\De y/L_y$, where $L_y$ denotes a typical effective length. To obtain a scale feeling, this misalignment-induced angular shift may be compared to the beam divergence $\si_{\th^*}$ (usually one of the leading error sources) or to the minimal scattering angle $\th_{\rm min}$ that can be reconstructed with a given optics. From this comparison, it is clear that the $\be^* = 1535\un{m}$ optics is much more sensitive to misalignments than the low-$\be^*$ optics. The misalignment-induced error is larger than the beam divergence and reaches almost $7\percent$ of the minimal angle $\th_{\rm min}$.
+An accurate detector alignment is of major importance in order to deliver precise measurements. Among the sub-detectors of \abb{TOTEM}, the alignment of the Roman Pots (\abb{RP}s) presents the biggest challenge since they are movable and, in principle, they can be at a different position for every run. \Tb{al reco impact} illustrates the impact of a misalignment on physics reconstruction. To give a representative overview we have included two optics -- the high-$\be^*$ (left column) and a low-$\be^*$ (right column, this is the standard 2010 \abb{LHC} optics discussed later in \Sc{felm}). For both of them we have considered a vertical misalignment $\De y$ of $100\un{\mu m}$ (a typical order, cf.~\Tb{al exp misal}). The impact on the vertical scattering angle reconstruction (see e.g.~\Eq{felm xy reco}) can be estimated by $\De y/L_y$, where $L_y$ denotes a typical effective length. To obtain a scale feeling, this misalignment-induced angular shift may be compared to the beam divergence $\si_{\th^*}$ (usually one of the leading error sources) or to the minimal scattering angle $\th_{\rm min}$ that can be reconstructed with a given optics. From this comparison, it is clear that the $\be^* = 1535\un{m}$ optics is much more sensitive to misalignments than the low-$\be^*$ optics. The misalignment-induced error is larger than the beam divergence and reaches almost $7\percent$ of the minimal angle $\th_{\rm min}$.
 
 \htab{al reco impact}{An illustration of misalignment impact on the angular reconstruction. $L_y$ denotes a typical vertical effective length (see \Eq{ttm lin par}), $\si_{\th^*}$ the beam divergence (see \Eq{ttm beam div}) and $\th_{\rm min}$ is the minimal scattering angle that may be reconstructed (cf.~$|t|_{30}$ in \Fg{ttm elastic acceptance}). $\De y$ is the vertical misalignment that we consider (cf.~\Tb{al exp misal}) and $\De\th_y$ represents its impact on the angular reconstruction.}{
 \omit&\multispan2\bhrulefill\cr
@@ -23,7 +23,7 @@ In this chapter we will describe a \abb{RP} alignment procedure that comprises t
 \bitm
 \itm First the \abb{RP}s are approached to the desired position as precisely as possible, then their position with respect to the beam is verified  with dedicated devices such as the beam position monitors (\abb{BPM}s) and the linear voltage differential transformers (\abb{LVDT}s), for details see \Sc{al collim}.
 \itm A lot of information on the relative alignment between the \abb{RP} sensors can be obtained by studying the reconstructed tracks. The underlying idea is that sensor misalignments give rise to residuals (hit distances from track fits). Thanks to the overlap between the vertical and horizontal pots, one can determine the relative positions of all \abb{RP} sensors within each station. This track-based alignment will be discussed in detail in \Sc{al tb}.
-\itm However, not all misalignments induce residuals (e.g.~a global shift or rotation), thus these misalignment modes are inaccessible to the track-based alignment. To overcome this limitation, one may use known symmetries of certain physics processes, for details see \Sc{al prof}. From this point of view, elastic scattering looks extremely useful. Elastic scattering events consists of two protons of the incident momentum (thus the optics transport is simplified, see \Eq{al el transport}) and of opposite directions (thus they can be used for aligning the opposite arms of the \abb{RP} system). The alignment with elastic events will be described in \Sc{al elast}.
+\itm However, not all misalignments induce residuals (e.g.~a global shift or rotation), thus these misalignment modes are inaccessible to the track-based alignment. To overcome this limitation, one may use known symmetries of certain physics processes, for details see \Sc{al prof}. From this point of view, elastic scattering looks extremely useful. It possesses the full azimuthal symmetry and its two anti-collinear protons simplify the event selection. The alignment with elastic events will be described in \Sc{al elast}.
 \eitm
 
 \vskip\itskip
@@ -94,7 +94,7 @@ Since the magnetic field within \abb{RP} stations is negligible, protons follow 
 \eqref{\pmatrix{x\cr y\cr z} = \pmatrix{a_x\cr a_y\cr 1} z + \pmatrix{b_x\cr b_y\cr 0}\ ,}{al local track}
 where the parameters $a$ and $b$ give the track slopes and intercepts.
 
-When a proton enters the sensitive volume of a silicon sensor, it creates electron-hole pairs along its trajectory. This charge is collected by neighbouring strips, giving rise to a measurable signal. While details of this charge sharing process can be found for example in Sec.~7.4~in \bref{hubert}, here we will assume that just the nearest strips is active (drawn in green in the front view of \Fg{al proton sensor interaction}). It is a reasonable assumption for the \abb{TOTEM} sensors. Then, the measurement outcome $m$ can be written as
+When a proton enters the sensitive volume of a silicon sensor, it creates electron-hole pairs along its trajectory. This charge is collected by neighbouring strips, giving rise to a measurable signal. While details of this charge sharing process can be found for example in Sec.~7.4~in \bref{hubert}, here we will assume that just the nearest strip is active (drawn in green in the front view of \Fg{al proton sensor interaction}). It is a reasonable assumption for the \abb{TOTEM} sensors. Then, the measurement $m$ can be written as
 \eqref{m = v + \De m\ ,}{al measurement}
 where $v$ gives the projection of the hit point in the $\vec v$ direction (i.e.~the read-out direction). $\De m$ is the \em{resolution error}, that is the error made by rounding $v$ to the nearest strip position.
 
@@ -128,7 +128,7 @@ The nominal sensors' orientations (see \Sc{ttm det}) are perpendicular to the $z
 \eqref{\cos\rh_{x,y}' = 1 - \O{10^{-5}},\qquad \sin\rh_{x,y}' = \rh_{x,y}' + \O{2\cdot 10^{-8}}}{al small rotation approximation}
 and thus it is a good approximation to take just the lowest terms in the Taylor expansion. A similar statement can be made for $\rh_z'$ too, just the expansion shall be made at the nominal value $\rh_z$.
 
-The fact that the track \Eq{al local track} hits a sensor can be expressed as $z' = 0$. Then it is straightforward to calculate the $v$ coordinate of the hit:
+The fact that the track \Eq{al local track} hits a sensor can be expressed as $z' = 0$ (see the left plot of \Fg{al proton sensor interaction}). Then it is straightforward to calculate the $v$ coordinate of the hit:
 \eqref{v =
 	\Bigg[
 		\underbrace{\pmatrix{-\sin\rh_z\cr\cos\rh_z}}_{\vec d}
@@ -142,7 +142,7 @@ The fact that the track \Eq{al local track} hits a sensor can be expressed as $z
 	\Bigg]^\T
 	+ \O{10^{-7}\un{m}}\ .
 }{al hit v}
-Here we have explicitly shown just the most important terms, the rest is included in the $\cal O$ term. The separation follows from the following order estimates: $c_z \sim 1\un{m}$ (distances between pots in a station), $(b - c)_{x, y} \sim 10^{-2}\un{m}$ (size of the sensors) and $a_{x, y} \sim 10^{-2}\un{rad}$ (the maximal angle that can be detected by near and far units simultaneously). The last estimate is rather an upper bound, the typical track angles are much smaller, see \Tb{al lhc datasets}. Thus for realistic data the neglected terms would be rather $\O{10^{-8}\un{m}}$.
+Here we have explicitly shown just the most important terms, the rest is included in the $\cal O$ term. The separation follows from the following order estimates: $c_z \sim 1\un{m}$ (distances between pots in a station), $(b - c)_{x, y} \sim 10^{-2}\un{m}$ (size of the sensors) and $a_{x, y} \sim 10^{-2}\un{rad}$ (the maximal angle that can be detected by near and far units simultaneously). The last estimate is rather an upper bound, the typical LHC track angles are of the order of $10^{-4}\un{rad}$ (see \Tb{al lhc datasets}). Thus for realistic LHC data the neglected terms would be rather $\O{10^{-8}\un{m}}$.
 
 In \Eq{al hit v} we have introduced the \em{unit} vector $\vec d$ which represents the (nominal/assumed) \em{read-out direction}. The vector $\vec d_\perp$ is perpendicular to the read-out direction, see \Fg{al proton sensor interaction}. The terms in the left-hand bracket represent the true/actual read-out direction. The vectors $\vec a$, $\vec b$, $\vec c$ and $\De \vec c$ represent two-dimensional vectors of the track slope, the track intercept, sensor's center and the sensor's position misalignment.
 
@@ -390,7 +390,7 @@ If one can find such a vector $\De\vec\ta^n$ for any set of track parameters $\v
 }{al sm}
 which is a consequence of $\mat\si^n \mat\al^n = 0$, see \Eq{al prop sigma n}. This would mean that $\mat S$ is singular (see e.g.~theorem 1.5.3 in \bref{anton}), with $\vec\ch$ being an eigenvector corresponding to zero eigenvalue. This vector represents a misalignment mode that is not accessible to the track-based alignment. We will refer to such modes as \em{singular modes}.
 
-Let us come back to \Eq{al sm con}. The key point was to find a $\De\vec\ta^n$ vector for any vector $\vec\ta^n$ -- no matter what was the interpretation of $\vec\ta^n$ -- whether it was a vector of true or estimated track parameters (cf.~\Eq{al tau linearization}). This is exactly what makes the difference between $\mat\Ga$ and $\tilde\mat\Ga$. Since this difference is irrelevant for \Eq{al sm con}, it can be written with tilded $\mat\Ga$ matrix too. Consequently, the result of \Eq{al sm} is also valid for $\bar\mat S$ and $\tilde\mat S$ (the difference among $\mat S$, $\bar\mat S$ and $\tilde\mat S$ matrices is only the use of $\mat\Ga$ or $\tilde\mat\Ga$). To conclude, the singular modes found in \Eq{al sm} are also singular modes for $\bar\mat S$ and $\tilde\mat S$ matrices.
+Let us come back to \Eq{al sm con}. The key point was to find a $\De\vec\ta^n$ vector for any vector $\vec\ta^n$ -- no matter whether $\vec\ta^n$ was a vector of true or estimated track parameters (cf.~\Eq{al tau linearization}). This is exactly what makes the difference between $\mat\Ga$ and $\tilde\mat\Ga$. Since this difference is irrelevant for \Eq{al sm con}, it can be written with tilded $\mat\Ga$ matrix too. Consequently, the result of \Eq{al sm} is also valid for $\bar\mat S$ and $\tilde\mat S$ (the difference among $\mat S$, $\bar\mat S$ and $\tilde\mat S$ matrices is only the use of $\mat\Ga$ or $\tilde\mat\Ga$). To conclude, the singular modes found in \Eq{al sm} are also singular modes for $\bar\mat S$ and $\tilde\mat S$ matrices.
 
 Later, we will find useful to use the definition of the $\mat\al$ matrix \Eq{al mat alpha} and rewrite the \rhs{} of \Eq{al sm con} as
 \eqref{\mat\al^n\, \De\vec\ta^n = \pmatrix{
@@ -509,7 +509,7 @@ If $\la_m = 0$, the equation cannot be solved -- the mode $m$ is a singular mode
 
 Whereas the singular and weak modes are very different from the theoretical point of view, they look the same for computer programs. Any numerical calculation of eigenvalues has a limited accuracy (we have used ROOT matrix libraries \bref{root matrix} at double precision). Therefore the eigenvalues corresponding to singular modes are found small but non-zero. In order to distinguish between regular and singular (or very weak) modes one thus needs to set a finite \em{singular limit}. \Fg{al eig rho} shows that a value of $10^{-9}$ is reasonable.
 
-It is reasonable to expect that the eigenvalues of $\tilde\mat S$ are proportional to the number of events $N_{\rm events}$. To see this, one should consider that the $\tilde\mat S$ is defined as a sum over events, see \Eq{al mat S}. Assuming there is a certain distribution of track patterns contributing to that sum, the number of events $N_{\rm events}$ can be regarded as a scaling factor. Then, in order to make the eigen-spectra event-number independent, it makes sense to define \em{normalized eigenvalues}:
+It makes sense to expect that the eigenvalues of $\tilde\mat S$ are proportional to the number of events $N_{\rm events}$. To see this, one should consider that the $\tilde\mat S$ is defined as a sum over events, see \Eq{al mat S}. Assuming there is a certain distribution of track patterns contributing to that sum, the number of events $N_{\rm events}$ can be regarded as a scaling factor. Then, in order to make the eigen-spectra event-number independent, it makes sense to define \em{normalized eigenvalues}:
 \eqref{\la_{\rm N} = \hbox{eigenvalue of }\tilde\mat S/N_{\rm events}\ ,}{al S norm eig val}
 which are used in \Fg{al eig rho}.
 
@@ -794,7 +794,7 @@ with an easy interpretation. The first term is the projection of the true misali
 
 Using the fitted track parameters in the $\mat\Ga$ matrices (see \Eq{al tau linearization}) is unavoidable. We can only hope that the induced (systematic) error is not too large and applying the alignment corrections (as resolved from \Eq{al alignment equation}) will improve our knowledge about the geometry. If so, one may perform several alignment iterations. In the second iteration we would have a better knowledge of the geometry, thus the track fits would be closer to the true track parameters, consequently there would be less bias and one might expect more accurate alignment results.
 
-This iteration process is sketched in \Tb{al iter} in a greater detail. In the beginning we assume that the geometry is $g_0$ while the true one is $g$. In the first iteration we would like to obtain alignment corrections $\hat\vec\ch = g - g_0$. This is not possible for two reasons: the presence of singular and weak modes and the alignment errors. The expectation for the alignment correction is shown in the right-most column. It comes from \Eq{al sol err}, in addition we have written explicitly the dependence of the systematic error $\De\vec\ch_{\rm syst}$ on $g - g_0$, that is ``how far we are from the true geometry.'' During the iteration this ``distance'' is reducing and so does the systematic error. On contrary, the statistical error is almost constant -- the resolution error $\De m$ does not change, only the $\tilde\mat\Ga$ are altered slightly. The iterations stop when no further improvement can be made, formally $|\hat\vec\ch^n|$ is smaller than a certain limit.
+This iteration process is sketched in \Tb{al iter} in a detail. In the beginning we assume that the geometry is $g_0$ while the true one is $g$. In the first iteration we would like to obtain alignment corrections $\hat\vec\ch = g - g_0$. This is not possible for two reasons: the presence of singular and weak modes and the alignment errors. The expectation for the alignment correction is shown in the right-most column. It comes from \Eq{al sol err}, in addition we have written explicitly the dependence of the systematic error $\De\vec\ch_{\rm syst}$ on $g - g_0$, that is ``how far we are from the true geometry.'' During the iteration this ``distance'' is reducing and so does the systematic error. On contrary, the statistical error is almost constant -- the resolution error $\De m$ does not change, only the $\tilde\mat\Ga$ are altered slightly. The iterations stop when no further improvement can be made, formally $|\hat\vec\ch^n|$ is smaller than a certain limit.
 
 \tab[\strut\quad\hfil#\qquad&#\hfil\qquad&#\hfil\quad\cr]{al iter}{A scheme of alignment iterations with the error evolution.}{\ln
 	& geometry & alignment correction \cr\ln
@@ -841,7 +841,7 @@ Using the full simulation chain including Geant4 (see \Fg{sr sw structure}) is v
 
 All our simulations have been done with the $220\un{m}$ station in sector 56. We have tried a number of track distributions, but the impact on the alignment results has been small, as it should. For the figures in this section, we have used a track distribution which resembles the one observed in the \abb{LHC} data for $\be^* = 3.5\un{m}$ -- both track slopes $a_x$ and $a_y$ generated according to a normal distribution with zero mean and standard deviation $\si_a$, the intercepts $b_x$ and $b_y$ (at $z=217\un{m}$) according to normal distributions with zero means and standard deviations $\si_x = 6\un{mm}$ and $\si_y= 8\un{mm}$.
 
-Our first \abb{MC} tests have been to verify the statistical behavior of the alignment results. In particular how the statistical and systematic errors depend on the size of a track sample used. For each sample size we have generated 20 samples (with different random seeds). For each sample we have made two simulations, each followed by an alignment analysis. For the \em{realistic simulation}, the sensor hit positions have been rounded to the nearest (inter-)strip position (see \Sc{fast simu}) and fitted track parameters (that is $\hat\mat\Ga$) have been used. This corresponds to the alignment application to real data. The second simulation has been made to get a reference alignment result with no errors included. For this \em{reference simulation} the sensor hit positions have not been rounded and true track parameters (that is $\mat\Ga$) have been used. The alignment analyses have been performed in three iterations, yielding a result and its uncertainty estimate. Then, from the 20 samples of the same size we have calculated the following quantities.
+Our first \abb{MC} tests have been to verify the statistical behavior of the alignment results. In particular how the statistical and systematic errors depend on the size of a track sample used. For each sample-size we have generated 20 samples (with different random seeds). For each sample we have made two simulations, each followed by an alignment analysis. For the \em{realistic simulation}, the sensor hit positions have been rounded to the nearest (inter-)strip position (see \Sc{fast simu}) and fitted track parameters (that is $\hat\mat\Ga$) have been used. This corresponds to the alignment application to real data. The second simulation has been made to get a reference alignment result with no errors included. For this \em{reference simulation} the sensor hit positions have not been rounded and true track parameters (that is $\mat\Ga$) have been used. The alignment analyses have been performed in three iterations, yielding a result and its uncertainty estimate. Then, from the 20 samples of the same size we have calculated the following quantities.
 \eqref{\vbox{\halign{\quad\strut#\qquad&#\quad\cr\ln
 quantity & label\cr\ln
 \hbox{mean (realistic result - reference result)}				& \hbox{systematic error} \cr
@@ -850,11 +850,11 @@ quantity & label\cr\ln
 }}}{al stat quan def}
 Two examples of such statistical studies can be found in \Fg{al stat fixDet} (with a set of fixed-sensors constraints) and \Fg{al stat final} (with the final constraints).
 
-For \Fg{al stat fixDet} the rotations have been fixed only in the near unit. Following our discussion of weak modes in \Sc{al sing modes} (see especially \Fg{al eig theta}), we may expect high alignment uncertainties for the far unit. This applies to shifts too since every rotation is accompanied by a shift, see \Eq{al sm rotz shr}. \Fg{al stat fixDet} confirms this expectation (compare top and bottom two rows). Let us make three more observations. First, the estimate of the systematic error deviates from zero by less than $2\si$ ($\si$ given by the semi-transparent band). Moreover, the discrepancy practically vanishes with the increasing sample-size. Second, the estimated uncertainty falls as $1/\sqrt{N_{\rm events}}$, which confirms our rule of thumb mentioned below \Eq{al resolution err mod}. Third, the ratio of the statistical error to the estimated uncertainty is almost flat, but below the expected value of one. This means that the uncertainty estimated with the help of the model \Er{al resolution err mod} is slightly overestimated. This might, in fact, partly compensate our neglecting the multiple scattering.
+In \Fg{al stat fixDet} the rotations have been fixed only in the near unit. Following our discussion of weak modes in \Sc{al sing modes} (see especially \Fg{al eig theta}), we may expect high alignment uncertainties for the far unit. This applies to shifts too since every rotation is accompanied by a shift, see \Eq{al sm rotz shr}. \Fg{al stat fixDet} confirms this expectation (compare top and bottom two rows). Let us make three more observations. First, the estimate of the systematic error deviates from zero by less than $2\si$ ($\si$ given by the semi-transparent band). Moreover, the discrepancy practically vanishes with the increasing sample-size. Second, the estimated uncertainty falls as $1/\sqrt{N_{\rm events}}$, which confirms our rule of thumb mentioned below \Eq{al resolution err mod}. Third, the ratio of the statistical error to the estimated uncertainty is almost flat, but below the expected value of one. This means that the uncertainty estimated with the help of the model \Er{al resolution err mod} is slightly overestimated. This might, in fact, partly compensate our neglecting the multiple scattering.
 
 Similar three observations could be made for \Fg{al stat final}. The first observation could be stated even stronger here: the systematic error is compatible with zero within its uncertainty (semi-transparent band). This figure corresponds to the final constraints. These fix the far-near unit rotation weak mode, thereby the alignment uncertainties are similar for both near and far unit.
 
-\fig{fig/pdf/al_stat_fixDet.pdf}{al stat fixDet}{A statistical study of the alignment method with a set of fixed-sensors constraints. For the read-out-direction shifts we have fixed the first two sensors in the top-near and the last two sensors in the top-far pot. Regarding the rotations, the first two sensors in the near-top pot have been fixed. The simulations have been performed with a realistic track slope spread $\si_a = 0.1\un{mrad}$. Each curve corresponds to the third sensor of a pot, see the legend. The near/far unit plots are at the top/bottom of the figure. The semi-transparent areas show $1\si$ error bands. The vertical dotted lines mark a typical number of events in \abb{LHC} runs.
+\fig{fig/pdf/al_stat_fixDet.pdf}{al stat fixDet}{A statistical study of the alignment method with a set of fixed-sensors constraints. For the read-out-direction shifts we have fixed the first two sensors in the top-near and the last two sensors in the top-far pot. Regarding the rotations, the first two sensors in the near-top pot have been fixed. The simulations have been performed with a realistic track slope spread $\si_a = 0.1\un{mrad}$. Each curve corresponds to the third sensor of a pot, see the legend. The near (far) unit plots are at the top (bottom) of the figure. The semi-transparent areas show $1\si$ error bands. The vertical dotted lines mark a typical number of events in \abb{LHC} runs.
 %[20 repetitions, geometry 2.7x3.3, misalignment rotz4, gauss6,8, 0.1mrad, 3 iterations]
 }
 
@@ -906,7 +906,7 @@ A similar study has been made for the systematic error induced by constraining t
 \eject %!
 \subsection[al data sel]{Input data selection}
 
-In the above \abb{MC} tests we have simulated one proton track per event. Thus, we have known a priory that all sensor hits have belonged to the track of a given event. For real \abb{LHC} data, the situation is more complicated. There might be a number of tracks per event, moreover different in every \abb{RP}. There might be a number of hits that do not belong to any particle track -- noise, data corruption, etc. That is why it is necessary to select carefully the input for the track-based alignment. It is better to lose some statistics than to bias the results with false input.
+In the above \abb{MC} tests we have simulated one proton track per event. Thus, we known a priori that all sensor hits belong to the track of a given event. For real \abb{LHC} data, the situation is more complicated. There might be a number of tracks per event, moreover different in every \abb{RP}. There might be a number of hits that do not belong to any particle track -- noise, data corruption, etc. That is why it is necessary to select carefully the input for the track-based alignment. It is better to lose some statistics than to bias the results with false input.
 
 The selection algorithm has two components: \em{hit selection} and \em{event selection}. In the first one, doubtful hits may be removed. In the latter, entire events may be dropped, if found suspicious.
 
@@ -926,6 +926,8 @@ The event selection starts with a $\ch^2$ cut, that is all events with track fit
 \tab[\strut\hfil#\ &#\hfil\cr]{al alg flags}{The options of the event selection algorithm.}{\ln
 parameter							& meaning\cr\ln
 \pmt{removeImpossible} 				& remove events with signal in a top and a bottom pot simultaneously\cr
+									& (this is not possible for a single LHC track and events with multiple\cr
+									& tracks can not be fully reconstructed)\cr
 \pmt{requireBothUnits} 				& require signal in both units\cr
 \pmt{requireOverlap} 				& require signal in the overlap between horizontal and vertical pots\cr
 \pmt{requireAtLeast3PotsInOverlap}	& if there is signal in the overlap, require signal in at least three pots\cr\ln
@@ -991,10 +993,10 @@ where $\bar x$ and $\bar y$ are the arithmetic means of the ideal values shown i
 Most of the results will be presented later in comparison with the other methods. But let us remark that this is the only method sensitive to the rotation between $U$ and $V$ sensors. See \Tb{al opt uv rot} for a list of the $U$-$V$ rotations determined per pot. These rotations are about an order of magnitude smaller that the expected rotation misalignments (\Tb{al exp misal}).
 
 \htab{al opt uv rot}{The rotation between $U$ and $V$ sensors (in $\rm mrad$) as determined from the optical metrology.}{
+\omit&\multispan6\bhrulefill\cr
+\omit&\multispan3\strut\bvrule\hfil near unit\hfil&\multispan3\vrule\hfil far unit\hfil\cr
 \omit&\multispan6\hrulefill\cr
-\omit&\multispan3\strut\bvrule\hfil near unit\hfil&\multispan3\bvrule\hfil far unit\hfil\cr
-\omit&\multispan6\hrulefill\cr
-\omit&\omit\bvrule\strut\hfil\hbox{top} &\hbox{bot} & \hbox{hor} & \hbox{top} & \hbox{bot} & \hbox{hor}\cr\ln
+\omit&\omit\bvrule\strut\hfil\hbox{top}\hfil &\hbox{bot} & \hbox{hor} & \hbox{top} & \hbox{bot} & \hbox{hor}\cr\bln
 \hbox{sector 45, $220\un{m}$ station} & 0.03 & -0.08 & -0.08 & -0.13 & -0.10 & 0.06\cr\ln
 \hbox{sector 56, $220\un{m}$ station} & 0.19 & -0.24 & -0.21 & 0.51 & 0.00 & -0.07\cr\bln
 }
